	13306 Battleground_Shuriken_	When attacking, chance to raise attack power of Throw Huuma Shuriken and Final Strike by 100% for 10 seconds
	2379 Wolong's_Battle_Robe	chance to stone enemies for 10 seconds when receiving physical damage
	2380 Robe_of_Order
	2376 General's_Plate_Mail	Increases heal recovery effectiveness on you by 10%

=======================

12/13
	* Rev. 11909 Fixed Big Defense Potion 10ea Box. (was giving small def pot.) [L0ne_W0lf]
12/05
	* Corrected Lif skill durations/delays according to
	  http://irowiki.org/wiki/Lif [Skotlex]
12/02
	* Rev. 11852 Added some missing headgears from others official servers. [Zephyrus]
11/27
	* Rev. 11824 Added Battle field and Memorial dungeon maps. [L0ne_W0lf]
	* Cart Termination now ignores the attacker's cards, as a side effect makes
	  it bypass AutoGuard & Cicada Skin Shedding [Skotlex]
11/22
	* Rev. 11784 Added slots to Cross Shield and Book of Charms (bugreport:429) [L0ne_W0lf]
	- Fixed the brynhildr item script. (bugreport:429)
	* Rev. 11778 Guard effect when auto-casted by Clock Card will now cancel on armor swap. [L0ne_W0lf]
11/17
	* Heat now only does 10 hits a second [Playtester]
	- this is an official kRO update
	- you can still set the delay in the skill_unit_db to what you desire
11/16
	* Rev. 11734 Corrected some taming item boxes. [Zephyrus]
	- Fixed another item giving 48 Gladius[3]
	- Added the Life Potion and Regeneration Potion functions.
11/13
	* Rev. 11720 Corrected some of the ep. 12 accessory bonuses. [L0ne_W0lf] 
	- Rev. 11722 Added some premium items (fireworks items and MDef Potions) [Zephyrus]
11/12
	* Rev. 11711 Fixed an item giving 24 of the 'Gladius' item. :P [L0ne_W0lf]
11/10
	* Rev. 11707 Small Item Database update. [L0ne_W0lf]
	- Added some missing items. (Still much more to add)
	  Slow process as I have to translate them myself.
	- Added Battle Ground reward equipment.
	- Implemented some 12.1 equipment bonuses.
	- Added enabling of level 3 Turn Undead back to Grand Cross